# fetch

./: README.md  dune-project  fetch-core.opam  fetch-eio.opam
.github/workflows/: check.yml
src/fetch-core/src/: dune  fetch_core.mli  fetch_functor.ml  fetch_signatures.ml  fetchify.ml  fetchify.mli  fetchify_signatures.ml  fetchify_signatures.mli  headers.mli  method.ml  method.mli  status.mli
src/fetch-eio/src/: dune  fetch_eio.ml
